--- a/templates/events_calendar.html
+++ b/templates/events_calendar.html
@@ -189,10 +189,8 @@ document.getElementById('importEventZipBtn').addEventListener('click', function(
   })
   .then(response => response.text())
   .then(html => {
-    // Replace page content with response
-    document.open();
-    document.write(html);
-    document.close();
+    // Reload page to show flash messages
+    window.location.reload();
   })
   .catch(error => {
     console.error('Import error:', error);
