--- a/templates/kiosk.html
+++ b/templates/kiosk.html
@@ -240,13 +240,13 @@ document.addEventListener('DOMContentLoaded', function() {
 
   // Inactivity timer for kiosk mode - return to kiosk after 5 minutes of inactivity
   let inactivityTimer;
-  const INACTIVITY_TIMEOUT = 5 * 60 * 1000; // 5 minutes in milliseconds
+  const INACTIVITY_TIMEOUT = 10 * 60 * 1000; // 10 minutes in milliseconds
 
   function resetInactivityTimer() {
     clearTimeout(inactivityTimer);
     inactivityTimer = setTimeout(function() {
-      // Return to kiosk page
-      window.location.href = '/kiosk';
+      // Go to screensaver after inactivity
+      window.location.href = '/screensaver';
     }, INACTIVITY_TIMEOUT);
   }
 
