--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,7 @@
               <li><a class="dropdown-item" href="{{ url_for('admin_payments') }}">{{ _('Payments') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_exports') }}">{{ _('Exports') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_imports') }}">{{ _('Imports') }}</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('admin_gallery') }}">{{ _('Gallery') }}</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_settings') }}">{{ _('Settings') }}</a></li>
             </ul>
