--- a/templates/screensaver.html
+++ b/templates/screensaver.html
@@ -27,9 +27,16 @@
     .view.active {
       display: block;
     }
+    .gallery {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+    }
     .gallery img {
-      width: 100%;
-      height: 100%;
+      max-width: 80%;
+      max-height: 80%;
       object-fit: contain;
       background: black;
     }
@@ -99,14 +106,17 @@
 
     function showNextImage() {
       if (imageUrls.length > 0) {
-        galleryDiv.innerHTML = `<img src="${imageUrls[currentImage]}" alt="Gallery Image">`;
+        galleryDiv.innerHTML = `<img src="${imageUrls[currentImage]}" alt="Gallery Image" onerror="console.error('Failed to load image:', this.src)">`;
         currentImage = (currentImage + 1) % imageUrls.length;
+        console.log('Showing image:', currentImage - 1, 'of', imageUrls.length);
       }
     }
 
     if (imageUrls.length > 0) {
       showNextImage();
       setInterval(showNextImage, 5000); // Change image every 5 seconds
+    } else {
+      console.log('No images available for slideshow');
     }
 
     // Redirect to kiosk on any activity
